--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 == Library web application
 
-Used here: http://library.itas-uni.eu
+Used for the ITAS library: http://library.itas-uni.eu
 
 more to come...
