minor README change

--- a/README
+++ b/README
@@ -1,5 +1,3 @@
 == Library web application
 
-Used for the ITAS library: http://library.itas-uni.eu
-
-more to come...
+example: ITAS library - http://library.itas-uni.eu
