--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 == Library web application
 
-example: ITAS library - http://library.itas-uni.eu
+one example: ITAS library - http://library.itas-uni.eu
